# cpp-falling-sands-sdl

./: Application.cpp  Application.h  CMakeLists.txt  main.cpp
UI/: ColorGradient.cpp  ColorGradient.h  UIElement.cpp  UIElement.h  UIRenderer.cpp  UIRenderer.h
logic/: Matrix.cpp  Matrix.h  Sand.cpp  Sand.h  Sand.hpp
util/: Coordinate.cpp  Coordinate.h  Random.hpp
